--- a/styles/layout/_home.scss
+++ b/styles/layout/_home.scss
@@ -53,6 +53,11 @@
   color: white;
 }
 
+.btnDeleteX {
+  border: none;
+  margin: auto;
+}
+
 .linkBlue {
   background-color: #5866bc;
   color: white;
@@ -72,7 +77,7 @@
 
 .header-container {
   display: grid;
-  grid-template-columns: 300px 30px 20px auto;
+  grid-template-columns: 300px 30px 20px auto 5px 20px;
   // background-color: #f2f2f2;
   margin: 0px 10px;
 }
